objects/Default__c.object
<CustomObject>
    <fields>
        <fullName>Default_Amount__c</fullName>
        <label>Default Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Month__c</fullName>
        <label>Default Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Application__c</fullName>
        <label>Loan Application</label>
        <referenceTo>Loan_Application__c</referenceTo>
        <relationshipLabel>Defaults</relationshipLabel>
        <relationshipName>Defaults</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Default</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Default Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defaults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>